manifests/alb-ingress/test/alb-deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alb-ingress-1
  name: alb-ingress-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alb-ingress-1
  template:
    metadata:
      labels:
        app: alb-ingress-1
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: index
          mountPath: /test/alb-ingress-1
        - name: config
          mountPath: /etc/nginx/conf.d
      initContainers:
      - image: nginx
        name: init-nginx
        command: ["/bin/sh","-c","echo alb-ingress-1 dayodayo > /tmp/index.html"]
        volumeMounts:
        - name: index
          mountPath: /tmp
      volumes:
      - name: index
        emptyDir: {}
      - name: config
        configMap: 
          name: alb-config-1
