manifests/alb-ingress/test/alb-ingress-1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alb-ingress-1
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: test
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /alb-ingress-1/
        backend:
          serviceName: alb-ingress-1
          servicePort: 80
