manifests/alb-ingress/test/alb-ingress-2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alb-ingress-2
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: test
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /alb-ingress-2/
        backend:
          serviceName: alb-ingress-2
          servicePort: 80
