manifests/alb-ingress/test/alb-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alb-ingress-2
  name: alb-ingress-2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: alb-ingress-2
